// Vitest Snapshot v1

exports[`shoud merge duplicate templates 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`),
  $$_templ_2 = /* #__PURE__ */ $$_templ,
  $$_templ_3 = /* #__PURE__ */ $$_create_template(\`<div>Foo</div>\`),
  $$_templ_4 = /* #__PURE__ */ $$_templ_3,
  $$_templ_5 = /* #__PURE__ */ $$_create_template(\`<div>Bar</div>\`),
  $$_templ_6 = /* #__PURE__ */ $$_create_template(\`<span></span>\`),
  $$_templ_7 = /* #__PURE__ */ $$_create_template(\`<span>Foo</span>\`),
  $$_templ_8 = /* #__PURE__ */ $$_templ_7,
  $$_templ_9 = /* #__PURE__ */ $$_templ_7,
  $$_templ_10 = /* #__PURE__ */ $$_create_template(\`<span>Bar</span>\`);

$$_clone($$_templ, 1 /* ELEMENT */)
$$_clone($$_templ_2, 1 /* ELEMENT */)
$$_clone($$_templ_3, 1 /* ELEMENT */)
$$_clone($$_templ_4, 1 /* ELEMENT */)
$$_clone($$_templ_5, 1 /* ELEMENT */)
$$_clone($$_templ_6, 1 /* ELEMENT */)
$$_clone($$_templ_7, 1 /* ELEMENT */)
$$_clone($$_templ_8, 1 /* ELEMENT */)
$$_clone($$_templ_9, 1 /* ELEMENT */)
$$_clone($$_templ_10, 1 /* ELEMENT */)
"
`;

exports[`should compile $class expression 1`] = `
"import { $$_clone, $$_class, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_class($$_el, \\"foo\\", true);

  return $$_el;
})()"
`;

exports[`should compile $cssvar expression 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div style=\\"--foo: 10\\"></div>\`);
$$_clone($$_templ, 1 /* ELEMENT */)"
`;

exports[`should compile $on expression 1`] = `
"import { $$_clone, $$_listen, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_listen($$_el, \\"foo\\", (e) => {});

  return $$_el;
})()"
`;

exports[`should compile $oncapture expression 1`] = `
"import { $$_clone, $$_listen, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_listen($$_el, \\"foo\\", (e) => {}, 1 /* CAPTURE */);

  return $$_el;
})()"
`;

exports[`should compile $prop expression 1`] = `
"import { $$_clone, $$_prop, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_prop($$_el, \\"fooBar\\", \\"baz\\");

  return $$_el;
})()"
`;

exports[`should compile $ref expression 1`] = `
"import { $$_clone, $$_ref, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_ref($$_el, (el) => {});

  return $$_el;
})()"
`;

exports[`should compile $ref expression that uses array 1`] = `
"import { $$_clone, $$_ref, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_ref($$_el, [(el) => {}, (el) => {}]);

  return $$_el;
})()"
`;

exports[`should compile $style expression 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div style=\\"foo: bar\\"></div>\`);
$$_clone($$_templ, 1 /* ELEMENT */)"
`;

exports[`should compile $use expression 1`] = `
"import { $$_clone, $$_directive, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_directive($$_el, directive, [1, 2, 3]);

  return $$_el;
})()"
`;

exports[`should compile SVG spread 1`] = `
"import { $$_clone, $$_spread, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<svg></svg>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_spread($$_el, props);

  return $$_el;
})()"
`;

exports[`should compile child expression 1`] = `
"import { $$_clone, $$_insert, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_insert($$_el, id);

  return $$_el;
})()"
`;

exports[`should compile conditional element expression  1`] = `
"import { $$_clone, $$_create_template, $$_insert } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div id=\\"a\\"></div>\`),
  $$_templ_2 = /* #__PURE__ */ $$_create_template(\`<div id=\\"b\\"></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_insert($$_el, id > 10 && $$_clone($$_templ_2, 1 /* ELEMENT */));

  return $$_el;
})()"
`;

exports[`should compile dynamic $cssvar expression 1`] = `
"import { $$_clone, $$_cssvar, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_cssvar($$_el, \\"foo\\", id);

  return $$_el;
})()"
`;

exports[`should compile dynamic $prop expression 1`] = `
"import { $$_clone, $$_prop, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_prop($$_el, \\"foo\\", id);

  return $$_el;
})()"
`;

exports[`should compile dynamic $style expression 1`] = `
"import { $$_clone, $$_style, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_style($$_el, \\"foo\\", id);

  return $$_el;
})()"
`;

exports[`should compile dynamic attribute 1`] = `
"import { $$_clone, $$_attr, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_attr($$_el, \\"foo\\", id);

  return $$_el;
})()"
`;

exports[`should compile fragment 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div id=\\"a\\"></div><div id=\\"b\\"></div>\`);
$$_clone($$_templ)"
`;

exports[`should compile innerHTML expression 1`] = `
"import { $$_clone, $$_inner_html, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_inner_html($$_el, \\"baz\\");

  return $$_el;
})()"
`;

exports[`should compile multiple $on expression 1`] = `
"import { $$_clone, $$_listen, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_listen($$_el, \\"foo\\", (e) => {});
  $$_listen($$_el, \\"foo\\", (e) => {});

  return $$_el;
})()"
`;

exports[`should compile multiple JSX nodes 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div><span id=\\"a\\"></span><span id=\\"b\\"></span></div>\`);
$$_clone($$_templ, 1 /* ELEMENT */)"
`;

exports[`should compile native $on expression 1`] = `
"import { $$_clone, $$_listen, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_listen($$_el, \\"click\\", (e) => {});

  return $$_el;
})()"
`;

exports[`should compile nested fragment 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div id=\\"root\\"><div id=\\"a\\"></div><div id=\\"b\\"></div></div>\`);
$$_clone($$_templ, 1 /* ELEMENT */)"
`;

exports[`should compile observable $class expression 1`] = `
"import { $$_clone, $$_class, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_class($$_el, \\"foo\\", id);

  return $$_el;
})()"
`;

exports[`should compile observable $cssvar expression 1`] = `
"import { $$_clone, $$_cssvar, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_cssvar($$_el, \\"foo-bar\\", id);

  return $$_el;
})()"
`;

exports[`should compile observable $prop expression 1`] = `
"import { $$_clone, $$_prop, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_prop($$_el, \\"foo\\", id);

  return $$_el;
})()"
`;

exports[`should compile observable $style expression 1`] = `
"import { $$_clone, $$_style, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_style($$_el, \\"foo\\", id);

  return $$_el;
})()"
`;

exports[`should compile observable attribute 1`] = `
"import { $$_clone, $$_attr, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_attr($$_el, \\"foo\\", id);

  return $$_el;
})()"
`;

exports[`should compile observable child expression 1`] = `
"import { $$_clone, $$_insert, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_insert($$_el, () => id() + 10);

  return $$_el;
})()"
`;

exports[`should compile observable conditional element expression  1`] = `
"import { $$_clone, $$_listen, $$_create_template, $$_insert } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div id=\\"a\\"></div>\`),
  $$_templ_2 = /* #__PURE__ */ $$_create_template(\`<div id=\\"b\\"></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_insert($$_el, () =>
    id() > 10 && (() => {
      const $$_root = $$_clone($$_templ_2),
        $$_el = $$_root.firstChild;

      $$_listen($$_el, \\"click\\", id());

      return $$_el;
    })());

  return $$_el;
})()"
`;

exports[`should compile shorthand $prop boolean 1`] = `
"import { $$_clone, $$_prop, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<button></button>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_prop($$_el, \\"disabled\\", true);

  return $$_el;
})()"
`;

exports[`should compile shorthand boolean attribute 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<button disabled=\\"\\"></button>\`);
$$_clone($$_templ, 1 /* ELEMENT */)"
`;

exports[`should compile single JSX node 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
$$_clone($$_templ, 1 /* ELEMENT */)"
`;

exports[`should compile single self-closing JSX node 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
$$_clone($$_templ, 1 /* ELEMENT */)"
`;

exports[`should compile spread 1`] = `
"import { $$_clone, $$_spread, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_spread($$_el, props);

  return $$_el;
})()"
`;

exports[`should compile static attribute (boolean) 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div foo=\\"true\\" bar=\\"false\\"></div>\`);
$$_clone($$_templ, 1 /* ELEMENT */)"
`;

exports[`should compile static attribute (number) 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div foo=\\"10\\"></div>\`);
$$_clone($$_templ, 1 /* ELEMENT */)"
`;

exports[`should compile static attribute (template string) 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div foo=\\"bar-baz\\"></div>\`);
$$_clone($$_templ, 1 /* ELEMENT */)"
`;

exports[`should compile static attributes 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div class=\\"foo bar\\" style=\\"baz daz\\"></div>\`);
$$_clone($$_templ, 1 /* ELEMENT */)"
`;

exports[`should group multiple static $cssvar expressions 1`] = `
"import { $$_clone, $$_cssvar, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div style=\\"pre: 10;--foo: 10;--bar: align-content\\"></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_cssvar($$_el, \\"baz\\", id);

  return $$_el;
})()"
`;

exports[`should group multiple static $style and $cssvar expressions 1`] = `
"import { $$_create_template, $$_clone } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div style=\\"pre: 10;baz: content;boo: 20;--foo: 10;--bar: align-content\\"></div>\`);
$$_clone($$_templ, 1 /* ELEMENT */)"
`;

exports[`should group multiple static $style expressions 1`] = `
"import { $$_clone, $$_style, $$_create_template } from \\"maverick.js/dom\\";

const $$_templ = /* #__PURE__ */ $$_create_template(\`<div style=\\"foo: a;foo: b;bar: true\\"></div>\`);
(() => {
  const $$_root = $$_clone($$_templ),
    $$_el = $$_root.firstChild;

  $$_style($$_el, \\"baz\\", id);

  return $$_el;
})()"
`;
